# ganai_agentic_kcda

./: .dockerignore  .gcloudignore  .gitattributes  .gitignore  Dockerfile  LICENSE.md  README.md  adk_cloudrunlaunch.sh  adk_weblaunch.sh  cleanup.sh  deploy.sh  deploy_cloudrun.sh  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: generate-badges.yml  sync-assets-to-docs.yml
a2a_flow/: a2a_server_launch.py  check_model_card.py  sweep_orphans_opt.sh
a2a_flow/a2a_client/: PROMPT_GUIDE.md  README.md  SUMMARY.md  agent.py  example_usage.py
a2a_flow/a2a_tutor_serv/: agent.py
docs/: BLOG.md  _config.yml  index.md
docs/_posts/: 2025-12-01-project-post.md  2025-12-03-a2a-implementation.md  2025-12-1-project_post.md
mcp_tool_chest/: calculator.py  db_tools.py  duckduckgo_tools.py  mardi_search.py  mardi_tools.py  mcpinspection.sh  testscript.md  wolfram_tools.py
src/models/: models.py
tests/: eval_results.md  mock_agent_adk_eval.py  routing_eval.sh  routing_eval_set.json  test_config.json
tests/routing_test/: agent.py
tests/routing_test/.adk/eval_history/: routing_test_routing_test_set_1764563405.8593137.evalset_result.json  routing_test_routing_test_set_1764563405.860467.evalset_result.json  routing_test_routing_test_set_1764563405.8612854.evalset_result.json  routing_test_routing_test_set_1764563405.861769.evalset_result.json  routing_test_routing_test_set_1764563484.4536116.evalset_result.json  (+19 more)
tutor_agent/: agent.py
tutor_agent/prompts/: mardi_prompt.md  orchastrator_prompt.md  wolfram_prompt.md
